kubernetes/activemq/activemq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq
spec:
  selector:
    matchLabels:
      app: activemq
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: backend
        component: messaging
        app: activemq
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9404"
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 0
      containers:
        - name: activemq
          image: vromero/activemq-artemis:2.16.0-alpine@sha256:2621ab238411031e364cc219c621f20a6613efc3a91b43c85148e8872e6b3163
          imagePullPolicy: Always
          ports:
            - containerPort: 8161
            - containerPort: 9404
            - containerPort: 61616
          livenessProbe:
            tcpSocket:
              port: 61616
          readinessProbe:
            tcpSocket:
              port: 61616
          volumeMounts:
            - name: activemq-persistent-storage
              mountPath: /var/lib/artemis/data
      volumes:
        - name: activemq-persistent-storage
          persistentVolumeClaim:
            claimName: activemq-pvc
