kubernetes/activemq/activemq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq
spec:
  type: ClusterIP
  selector:
    app: activemq
  ports:
    - name: mgmt
      protocol: TCP
      port: 8161
    - name: activemq
      protocol: TCP
      port: 61616
