kubernetes/activemq/activemq-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: activemq
spec:
  rules:
  - host: activemq.management.minikube
    http:
      paths:
      - path:
        backend:
          serviceName: activemq
          servicePort: 8161
